<resources>
    <string name="app_name">Spotify</string>
    <string name="millions_of_songs">Millions of Songs</string>
    <string name="free_on_spotify">Free on Spotify</string>
    <string name="millions_of_songs_free_on_spotify">Millions of songs.\nFree on Spotify.</string>
    <string name="sign_up_free">Sign up free</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create Account</string>
    <string name="back">Back</string>
    <string name="whats_your_email">What\'s your email?</string>
    <string name="next">Next</string>
    <string name="message">You\'ll need to confirm this email later.</string>
    <string name="password_message">Use at least 8 characters.</string>
    <string name="password">Password</string>
    <string name="email_or_username">Email or username</string>
    <string name="create_a_password">Create a password</string>
    <string name="whats_your_date_of_birth">What\'s your date of birth?</string>
    <string name="whats_your_gender">What\'s your gender?</string>
    <string name="whats_your_name">What\'s your name?</string>
    <string name="create_account_small">Create account</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="non_binary">Non-binary</string>
    <string name="this_appears_on_your_spotify_profile">This appears on your spotify profile.</string>
    <string name="terms_message">By tapping \"Create account\", you agree to the Spotify Terms of Use.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy_message">To learn more about how Spotify collects, uses, shares and protects your personal data, please see the Spotify Privacy Policy.</string>
    <string name="protected_by_recaptcha">PROTECTED BY RECAPTCHA</string>
    <string name="i_would_prefer_not_to_receive_marketing_messages_from_spotify">I would prefer not to receive marketing messages from Spotify.</string>
    <string name="share_my_registration_data">Share my registration data with Spotify\'s content providers for marketing purposes.</string>
    <string name="log_in_without_password">Log in without password</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="your_library">Your Library</string>
    <string name="library">Library</string>
    <string name="liked_songs">Liked Songs</string>
    <string name="good_evening">Good evening</string>
    <string name="artists_songs_or_podcasts">Artists, songs, or podcasts</string>
    <string name="your_top_genres">Your top genres</string>
    <string name="browse_all">Browse all</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="playlists">Playlists</string>
    <string name="artists">Artists</string>
    <string name="downloaded">Downloaded</string>
    <string name="trending_albums_for_you">Trending albums for you</string>
    <string name="episodes_for_you">Episodes for you</string>
    <string name="recently_played">Recently played</string>
    <string name="discover_something_new">Discover something new</string>
    <string name="the_getaway">The Getaway</string>
    <string name="album">Album</string>
    <string name="red_hot_chili_peppers">Red Hot Chili Peppers</string>
    <string name="hovering_dot">•</string>
    <string name="album_red_hot_chili_peppers">Album • Red Hot Chili Peppers</string>
    <string name="another_love">Another Love</string>
    <string name="tom_odell">Tom Odell</string>
    <string name="artist">Artist</string>
    <string name="simon_amp_garfunkel"><![CDATA[Simon & Garfunkel]]></string>
    <string name="slow_dancing_in_the_dark">SLOW DANCING IN THE DARK</string>
    <string name="joji">Joji</string>
    <string name="menu">menu</string>
    <string name="spotify_logo">Spotify Logo</string>

</resources>