<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/home"
        android:checkable="true"
        android:icon="@drawable/bottom_menu_home_selector"
        app:itemIconTint="@color/bottom_navigation_item_color"
        app:itemTextColor="@color/bottom_navigation_item_color"
        android:title="@string/home" />

    <item
        android:id="@+id/search"
        android:checkable="true"
        android:icon="@drawable/bottom_menu_search_selector"
        app:itemIconTint="@color/bottom_navigation_item_color"
        app:itemTextColor="@color/bottom_navigation_item_color"
        android:title="@string/search" />

    <item
        android:id="@+id/your_library"
        android:checkable="true"
        android:icon="@drawable/bottom_menu_library_selector"
        app:itemIconTint="@color/bottom_navigation_item_color"
        app:itemTextColor="@color/bottom_navigation_item_color"
        android:title="@string/your_library" />
</menu>