<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.login.LoginFragment">

        <include layout="@layout/create_account_toolbar"
            android:id="@+id/toolbar"/>

        <TextView
            android:id="@+id/textView_question_email_or_username"
            style="@style/slogan_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:lines="1"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/email_or_username"
            android:textSize="28sp"
            app:autoSizeTextType="uniform" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_email_or_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_email_edittext"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="24dp" />

        <TextView
            android:id="@+id/textView_question_password"
            style="@style/slogan_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:lines="1"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/password"
            android:textSize="28sp"
            app:autoSizeTextType="uniform" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/light_grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_email_edittext"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="36dp" />

        <android.widget.Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_next_button"
            android:backgroundTint="@drawable/tint_next_button"
            android:fontFamily="@font/gotham_medium"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <Space
            android:layout_width="0dp"
            android:layout_height="30dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/male_button"
            style="@style/gender_button_text_style"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:background="@drawable/bg_gender_button"
            android:text="@string/log_in_without_password" />

    </LinearLayout>
</layout>